--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/a46267d6d2.js" crossorigin="anonymous"></script>
     <title>ATG CRM</title>
 </head>
 <body>
     <div class="wrapper">
         <nav>
-            <h1>Hello ATG</h1>
+            <div class="title"><i class="fa-2xl fa-solid fa-chart-gantt"></i><h1>Dashboard</h1></div>
             <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-                <li>Item 5</li>
+                <li><i class="fa-xl fa-solid fa-house"></i><p>Home</p></li>
+                <li><i class="fa-xl i-nav fa-regular fa-address-card"></i><p>Profile</p></li>
+                <li><i class="fa-xl i-nav fa-solid fa-comments"></i><p>Messages</p></li>
+                <li><i class="fa-xl fa-sharp fa-solid fa-clock"></i><p>History</p></li>
+                <li><i class="fa-xl fa-solid fa-clipboard-list"></i><p>Tasks</p></li>
+                <li><i class="fa-lg fa-solid fa-users"></i><p>Communities</p></li>
+                <br>
+                <li><i class="fa-xl fa-solid fa-gear"></i><p>Settings</p></li>
+                <li><i class="fa-xl fa-solid fa-circle-question"></i><p>Support</p></li>
+                <li><i class="fa-xl fa-solid fa-shield-heart"></i><p>Privacy</p></li>
             </ul>
         </nav>
         <header>
