all elements added and properly structured. most alignments done

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                     <input type="text" placeholder="    Search...">
                 </div>
                 <div class="greeting">
-                    <img src="./photos/Chibi.jpg" alt="">
+                    <img src="./photos/jagerzinho.jpeg" alt="">
                     <p>Hi There,</p>
-                    <h1>Angry Chibi (@chibi) </h1>
+                    <h1>Jäger Bobaião (@jager) </h1>
                 </div>
             </div>
             <div class="right-header">
                 <div class="profile">
                     <i class="fa-xl fa-solid fa-bell"></i>
-                    <img src="./photos/Chibi.jpg" alt="">
-                    <h2>Angry Chibi</h1>
+                    <img src="./photos/jagerzinho.jpeg" alt="">
+                    <h2>Jäger Bobaião</h1>
                 </div>
                 <div class="upper-buttons">
                     <button>New</button><button>Upload</button><button>Share</button>
@@ -58,7 +58,11 @@
                 <div class="cards">
                     <div class="card_item">
                         <h3>Card Title</h3>
-                        <p>Card Content Lorem Ipsum</p>
+                        <p>Aliquam sagittis sed leo vitae lacinia. Fusce metus leo, maximus ac venenatis id, pretium sed mi. 
+                            Nullam vulputate libero libero. Morbi id malesuada purus. 
+                            Sed consectetur sollicitudin sapien, sit amet efficitur neque dignissim quis. 
+                            
+                        </p>
                         <div class="card_buttons">
                             <button><i class="fa-xl fa-regular fa-star"></i></button>
                             <button><i class="fa-xl fa-regular fa-eye"></i></button>
@@ -76,7 +80,10 @@
                     </div>
                     <div class="card_item">
                         <h3>Card Title</h3>
-                        <p>Card Content Lorem Ipsum</p>
+                        <p>Donec vulputate ullamcorper tortor eget faucibus. Sed eu lacus quis ligula lacinia maximus.
+                            Vivamus eget ante a ex accumsan pretium. In hac habitasse platea dictumst. 
+                            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.             
+                        </p>
                         <div class="card_buttons">
                             <button><i class="fa-xl fa-regular fa-star"></i></button>
                             <button><i class="fa-xl fa-regular fa-eye"></i></button>
@@ -85,7 +92,9 @@
                     </div>
                     <div class="card_item">
                         <h3>Card Title</h3>
-                        <p>Card Content Lorem Ipsum</p>
+                        <p>Praesent at gravida risus. Integer mattis sollicitudin ligula, id vulputate erat sollicitudin at. 
+                            Nam auctor felis nulla, non tincidunt metus dapibus eu. Phasellus odio augue, finibus eu congue non, sodales ut nisl.
+                        </p>
                         <div class="card_buttons">
                             <button><i class="fa-xl fa-regular fa-star"></i></button>
                             <button><i class="fa-xl fa-regular fa-eye"></i></button>
@@ -94,7 +103,10 @@
                     </div>
                     <div class="card_item">
                         <h3>Card Title</h3>
-                        <p>Card Content Lorem Ipsum</p>
+                        <p>Mauris molestie nibh ac viverra mattis. 
+                            Nam ut imperdiet magna, sed euismod ipsum. Nulla metus lectus, dictum eget enim non, pellentesque gravida nibh. 
+                            Quisque eleifend diam sit amet sollicitudin pharetra.
+                        </p>
                         <div class="card_buttons">
                             <button><i class="fa-xl fa-regular fa-star"></i></button>
                             <button><i class="fa-xl fa-regular fa-eye"></i></button>
@@ -103,7 +115,10 @@
                     </div>
                     <div class="card_item">
                         <h3>Card Title</h3>
-                        <p>Card Content Lorem Ipsum</p>
+                        <p>Nullam scelerisque purus sit amet lorem gravida, et cursus leo semper. 
+                            Ut venenatis suscipit sem eget accumsan. 
+                            Curabitur fringilla dolor eu turpis sagittis ultrices.
+                        </p>
                         <div class="card_buttons">
                             <button><i class="fa-xl fa-regular fa-star"></i></button>
                             <button><i class="fa-xl fa-regular fa-eye"></i></button>
@@ -117,15 +132,17 @@
                 <div class="announcements-card">
                     <div class="announcements-item">
                         <h3>Site Maintenance</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa impedit facere maiores quisquam ut delectus qui nostrum iste molestiae...</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa impedit facere maiores quisquam ut delectus...</p>
                     </div>
-                    <div class="announcements-item middle">
+                    <hr>
+                    <div class="announcements-item">
                         <h3>Community Share Day</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti sunt repellendus quibusdam assumenda ipsa! Possimus assumenda...</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti sunt repellendus quibusdam assumenda ipsa!</p>
                     </div>
+                    <hr>
                     <div class="announcements-item">
                         <h3>Updated Privacy Policy</h3>
-                        <p>Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility...</p>
+                        <p>Thestral dirigible plums, Viktor Krum hexed memory charm. Vingardium leviosa. Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince...</p>
                     </div>
                 </div>
             </div>
@@ -147,14 +164,21 @@
                         </div>
                     </div>
                     <div class="user">
-                        <img src="./photos/Jager.jpg" alt="">
+                        <img src="./photos/jagerzinho.jpeg" alt="">
                         <div class="user_id">
                             <h3>@jager</h3>
-                            <p>Dummy Jäger</p>
+                            <p>Jäger Bobaião</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="./photos/torgal2.jpg" alt="">
+                        <div class="user_id">
+                            <h3>@torgal</h3>
+                            <p>Torgal Fenrir</p>
                         </div>
                     </div>
                 </div>
-            </div>
+
         </div>
     </div>
     
