--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     </style>
     <script src="https://kit.fontawesome.com/a46267d6d2.js" crossorigin="anonymous"></script>
-    <title>ATG CRM</title>
+    <title>The Odin Project Dashboard</title>
 </head>
 <body>
     <div class="wrapper">
